<resources>
    <string name="app_name">Geometry</string>
    <string name="square">Quadrado</string>
    <string name="triangle">Triângulo</string>
    <string name="circle">Círculo</string>
    <string name="select_shape">Selecione a forma</string>
    <string name="shape_info">Informe os dados do %1$s</string>
    <string name="radius">Raio</string>
    <string name="base">Base</string>
    <string name="height">Altura</string>
    <string name="next">Avançar</string>
    <string name="result_area">Área: %1$.2f cm²</string>
    <string name="start_again">Começar novamente</string>
</resources>
